fix alignment

--- a/iteration2/game1/css/style.css
+++ b/iteration2/game1/css/style.css
@@ -22,20 +22,25 @@ html {
     align-items: center;
 }
 
-ul li img {
+li div {
+    display: table-cell;
+    vertical-align: middle;
+}
+
+ul {
     list-style-type: none;
+}
+
+ul li img {
+    width: 350px;
     align-items: center;
+    text-align: center;
 }
 
 ul li div span {
     width: 350px;
     align-items: center;
     text-align: center;
-}
-
-li div {
-    display: table-cell;
-    vertical-align: middle;
 }
 
 .wrapper {
